# artefacts

./: .buildinfo  .devcontainer.json  .gitignore  .gitmodules  Dockerfile  README.md  alternatives.html  api.html  config.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  reference.html  search.html  searchindex.js  tutorial.html
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: ci.yml  docs.yml  lint.yml
_modules/: index.html
_modules/artefacts/: api.html  config.html  core.html  models.html  state.html
_sources/: api.rst.txt  config.rst.txt  index.rst.txt  install.rst.txt  reference.rst.txt  tutorial.rst.txt
artefacts/: __init__.py  api.py  config.py  conftest.py  core.py  deserializers.py  loaders.py  mixins.py  models.py  state.py  version.py
dbt_projects/: README.md  profiles.yml
docs/: alternatives.rst  api.rst  conf.py  config.rst  index.rst  install.rst  reference.rst  tutorial.rst
doctrees/: api.doctree  config.doctree  environment.pickle  index.doctree  reference.doctree
html/: api.html  config.html  index.html  objects.inv  reference.html
html/_modules/artefacts/: api.html
html/_sources/: config.rst.txt
tests/: conftest.py  test_api.py  test_artefacts.py  test_artifact_reader.py  test_catalog.py  test_config.py  test_core.py  test_dbt_project_setup.py  test_dbt_projects_status.py  test_deserializers.py  test_manifest.py  test_metadata.py  test_mixins.py  test_models.py  test_nodes.py  test_run_results.py  test_setup.py  test_sources.py  test_version.py
