[tool.pytest.ini_options]
addopts = "-v --cov artefacts"

[tool.poetry]
name = "artefacts"
version = "1.1.0"
description = "Deserialization for dbt artifacts"
authors = ["Tom Waterman <tjwaterman99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.0"
toml = "^0.10.2"
packaging = "^21.3"

[tool.poetry.dev-dependencies]
dbt-core = "^1.0.1"
dbt-postgres = "^1.0.1"
pytest = "^6.0"
Sphinx = "^4.0.0"
sphinx-toolbox = "^2.16.1"
furo = "^2022.1.2"
sphinx-autobuild = "^2021.3.14"
pytest-cov = "^3.0.0"
coveralls = "^3.3.1"
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[artefacts]
target_path = './target'
testing = 1